--- a/localisation/RF_00_Countries_l_english.yml
+++ b/localisation/RF_00_Countries_l_english.yml
@@ -2889,25 +2889,25 @@ JAP_revolutionary_anarchism_ADJ:0 "Japanese"
 JAP_revisionist_socialism:0 "Socialist Republic of Japan"
 JAP_revisionist_socialism_DEF:0 "Japan"
 JAP_revisionist_socialism_ADJ:0 "Japanese"
-JAP_social_democratism:0 "Republic of Japan"
+JAP_social_democratism:0 "Empire of Japan"
 JAP_social_democratism_DEF:0 "Japan"
 JAP_social_democratism_ADJ:0 "Japanese"
 JAP_placeholderism:0 "Japan"
 JAP_placeholderism_DEF:0 "Japan"
 JAP_placeholderism_ADJ:0 "Japanese"
-JAP_liberalism:0 "Japan"
+JAP_liberalism:0 "Empire of Japan"
 JAP_liberalism_DEF:0 "Japan"
 JAP_liberalism_ADJ:0 "Japanese"
-JAP_conservatism:0 "Japan"
+JAP_conservatism:0 "Empire of Japan"
 JAP_conservatism_DEF:0 "Japan"
 JAP_conservatism_ADJ:0 "Japanese"
-JAP_right_authoritarianism:0 "Japan"
+JAP_right_authoritarianism:0 "Empire of Japan"
 JAP_right_authoritarianism_DEF:0 "Japan"
 JAP_right_authoritarianism_ADJ:0 "Japanese"
-JAP_despotism:0 "Imperial Japan"
+JAP_despotism:0 "Empire of Japan"
 JAP_despotism_DEF:0 "Japan"
 JAP_despotism_ADJ:0 "Japanese"
-JAP_reactionism:0 "Imperial Japan"
+JAP_reactionism:0 "Empire of Japan"
 JAP_reactionism_DEF:0 "Japan"
 JAP_reactionism_ADJ:0 "Japanese"
 JAP_accelerationism:0 "Japan"
