poland thicc cause japan xd

--- a/localisation/RF_00_Countries_l_english.yml
+++ b/localisation/RF_00_Countries_l_english.yml
@@ -5002,9 +5002,9 @@ POL_liberalism_ADJ:0 "Polish"
 POL_conservatism:0 "Poland"
 POL_conservatism_DEF:0 "Poland"
 POL_conservatism_ADJ:0 "Polish"
-POL_right_authoritarianism:0 "Poland"
-POL_right_authoritarianism_DEF:0 "Poland"
-POL_right_authoritarianism_ADJ:0 "Polish"
+POL_right_authoritarianism:0 "Polish–Lithuanian Empire"
+POL_right_authoritarianism_DEF:0 "Poland-Lithuania"
+POL_right_authoritarianism_ADJ:0 "Polish-Lithuanian"
 POL_despotism:0 "Polish State"
 POL_despotism_DEF:0 "the Polish State"
 POL_despotism_ADJ:0 "Polish"
