--- a/localisation/RF_Poland_l_english.yml
+++ b/localisation/RF_Poland_l_english.yml
@@ -28,8 +28,8 @@ POL_conservatism:0 "Poland"
 POL_conservatism_DEF:0 "Poland"
 POL_conservatism_ADJ:0 "Polish"
 
-POL_right_authoritarianism:0 "Poland"
-POL_right_authoritarianism_DEF:0 "Poland"
+POL_right_authoritarianism:0 "Polish-Lithuanian State"
+POL_right_authoritarianism_DEF:0 "the Polish-Lithuanian State"
 POL_right_authoritarianism_ADJ:0 "Polish"
 
 POL_despotism:0 "Poland"
