--- a/localisation/RF_00_Countries_l_english.yml
+++ b/localisation/RF_00_Countries_l_english.yml
@@ -3854,7 +3854,7 @@ MAN_liberalism_ADJ:0 "Manchurian"
 MAN_conservatism:0 "Manchuria"
 MAN_conservatism_DEF:0 "Manchuria"
 MAN_conservatism_ADJ:0 "Manchurian"
-MAN_right_authoritarianism:0 "Empire of Man"
+MAN_right_authoritarianism:0 "Fengtian Clique"
 MAN_right_authoritarianism_DEF:0 "Fengtian Clique"
 MAN_right_authoritarianism_ADJ:0 "Manchurian"
 MAN_despotism:0 "Fengtian Clique"
